<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_side_config"
            android:title="@string/version_setting_title" />
        <item
            android:id="@+id/board"
            android:icon="@drawable/ic_side_notice"
            android:title="@string/notice_title" />
        <!--<item-->
            <!--android:id="@+id/ask"-->
            <!--android:icon="@drawable/ic_side_ask"-->
            <!--android:title="문의 하기" />-->
        <item
            android:id="@+id/open"
            android:icon="@drawable/ic_all_inclusive"
            android:title="@string/open_source_title"/>
    </group>

</menu>
